
2010-06-01 Ugo Pattacini <ugo.pattacini@iit.it>
	   * Ported to iCub/main

2010-05-26 Serena Ivaldi <serena.ivaldi@iit.it> and Matteo Fumagalli <matteo.fumagalli@iit.it>
	   * First release published on the repository

2010-05-27 Serena Ivaldi <serena.ivaldi@iit.it>
	   * added iDynInvSensor-Arm/Leg to iDynInv

