@@ -66,9 +66,12 @@ namespace iDyn{
 	class iFakeDyn;
 	class iFakeDyn2GdL;
 	class iDynSensor;
+	class iDynSensorLeg;
+	class iDynSensorArm;
 	class iFTransform;
     class iSFrame;
 	class iFB;
+
 
 
 /**
